[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cn-streetview-fetcher"
version = "0.1.0"
description = "Official-API based street-view image fetching toolkit for mainland China."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "cn-streetview-fetcher contributors" }
]
dependencies = [
  "httpx>=0.27",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "streamlit>=1.34",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
]

[project.scripts]
cnsv = "cn_streetview_fetcher.cli:app"
cnsv-ui = "cn_streetview_fetcher.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cn_streetview_fetcher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
